Another Minor Fix, Testing to align the buttons

--- a/css/style.css
+++ b/css/style.css
@@ -646,7 +646,7 @@ footer img{
 	/* text-align: center; */
 	min-width: 8rem;
 	margin: 0.5rem 0;
-	width: 90%;
+	width: 100%;
 	padding: 0.5rem 0.4rem;
 }
 
